// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> appearance snapshot 1`] = `
<div
  className="ub-b-top_2px-solid-0070AC ub-b-rgt_2px-solid-0070AC ub-b-btm_2px-solid-0070AC ub-b-lft_2px-solid-0070AC ub-pst_relative ub-ovflw-x_hidden ub-ovflw-y_hidden ub-dspl_flex ub-pb_20px ub-pl_20px ub-pr_20px ub-pt_20px ub-bg-clr_ebf8ff ub-bblr_12px ub-bbrr_12px ub-btlr_12px ub-btrr_12px ub-color_005a8a ub-box-szg_border-box"
  role="alert"
>
  <div
    className="ub-mr_16px ub-ml_2px ub-mt_-1px ub-dspl_flex ub-algn-itms_flex-start ub-box-szg_border-box"
  >
    <svg
      className="css-3e9a6e ub-opct_0-2 ub-w_22px ub-h_22px ub-box-szg_border-box"
      data-icon="info-sign"
      viewBox="0 0 20 20"
    >
      <path
        d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="ub-flx_1 ub-box-szg_border-box"
  >
    <h4
      className="ub-mt_2px ub-mb_0px ub-color_inherit ub-fnt-fam_1yirpkw ub-f-wght_700 ub-fnt-sze_14px ub-ln-ht_1 ub-ltr-spc_-0-05px ub-box-szg_border-box"
    >
      Test title
    </h4>
    <div
      className="ub-box-szg_border-box"
    />
  </div>
</div>
`;

exports[`<Alert /> basic snapshot 1`] = `
<div
  className="ub-b-top_2px-solid-0070AC ub-b-rgt_2px-solid-0070AC ub-b-btm_2px-solid-0070AC ub-b-lft_2px-solid-0070AC ub-pst_relative ub-ovflw-x_hidden ub-ovflw-y_hidden ub-dspl_flex ub-pb_20px ub-pl_20px ub-pr_20px ub-pt_20px ub-bg-clr_ebf8ff ub-bblr_12px ub-bbrr_12px ub-btlr_12px ub-btrr_12px ub-color_005a8a ub-box-szg_border-box"
  role="alert"
>
  <div
    className="ub-mr_16px ub-ml_2px ub-mt_-1px ub-dspl_flex ub-algn-itms_flex-start ub-box-szg_border-box"
  >
    <svg
      className="css-3e9a6e ub-opct_0-2 ub-w_22px ub-h_22px ub-box-szg_border-box"
      data-icon="info-sign"
      viewBox="0 0 20 20"
    >
      <path
        d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="ub-flx_1 ub-box-szg_border-box"
  >
    <h4
      className="ub-mt_2px ub-mb_0px ub-color_inherit ub-fnt-fam_1yirpkw ub-f-wght_700 ub-fnt-sze_14px ub-ln-ht_1 ub-ltr-spc_-0-05px ub-box-szg_border-box"
    >
      A simple general message
    </h4>
    <div
      className="ub-box-szg_border-box"
    />
  </div>
</div>
`;

exports[`<Alert /> intent snapshot 1`] = `
<div
  className="ub-b-top_2px-solid-F45B69 ub-b-rgt_2px-solid-F45B69 ub-b-btm_2px-solid-F45B69 ub-b-lft_2px-solid-F45B69 ub-pst_relative ub-ovflw-x_hidden ub-ovflw-y_hidden ub-dspl_flex ub-pb_20px ub-pl_20px ub-pr_20px ub-pt_20px ub-bg-clr_fcd6d9 ub-bblr_12px ub-bbrr_12px ub-btlr_12px ub-btrr_12px ub-color_d10e20 ub-box-szg_border-box"
  role="alert"
>
  <div
    className="ub-mr_16px ub-ml_2px ub-mt_-1px ub-dspl_flex ub-algn-itms_flex-start ub-box-szg_border-box"
  >
    <svg
      className="css-8qwu00 ub-opct_0-2 ub-w_22px ub-h_22px ub-box-szg_border-box"
      data-icon="error"
      viewBox="0 0 20 20"
    >
      <path
        d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="ub-flx_1 ub-box-szg_border-box"
  >
    <h4
      className="ub-mt_2px ub-mb_0px ub-color_inherit ub-fnt-fam_1yirpkw ub-f-wght_700 ub-fnt-sze_14px ub-ln-ht_1 ub-ltr-spc_-0-05px ub-box-szg_border-box"
    >
      Test title
    </h4>
    <div
      className="ub-box-szg_border-box"
    />
  </div>
</div>
`;
